update repository with others tests

--- a/Heart.ipynb
+++ b/Heart.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 268,
-   "id": "e4b52cde",
+   "execution_count": 290,
+   "id": "8f6267bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "rm(list=ls())\n",
     "library(caTools)\n",
-    "heart <- read.table(\"~/Documentos/ufmg/2022-1/padrao/Bayes/code/Bayes/heart.dat\", header = FALSE)\n",
+    "heart <- read.table(\"./heart.dat\", header = FALSE)\n",
     "Y = as.matrix(heart[,14])\n",
     "X= as.matrix(heart[,1:13])\n",
     "\n",
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "id": "26c1a080",
+   "execution_count": 291,
+   "id": "d8d1d979",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "id": "1f1a0433",
+   "execution_count": 292,
+   "id": "20bb5fe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "53aae992",
+   "execution_count": 293,
+   "id": "37e1dd29",
    "metadata": {},
    "outputs": [
     {
@@ -108,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "id": "0ba22ce2",
+   "execution_count": 294,
+   "id": "349c2c70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "id": "e4f78b50",
+   "execution_count": 295,
+   "id": "adc0fc1a",
    "metadata": {},
    "outputs": [
     {
@@ -139,25 +139,25 @@
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "\t<tr><td>1  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>...</td><td>1  </td><td>2  </td><td>2  </td><td>2  </td><td>2  </td><td>1  </td><td>1  </td><td>1  </td><td>1  </td><td>2  </td></tr>\n",
+       "\t<tr><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>...</td><td>2  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "\\begin{tabular}{llllllllllllllllllllllllllll}\n",
-       "\t 1   & 1   & 2   & 1   & 1   & 2   & 2   & 1   & 2   & 1   & ... & 1   & 2   & 2   & 2   & 2   & 1   & 1   & 1   & 1   & 2  \\\\\n",
+       "\t 2   & 2   & 1   & 2   & 1   & 1   & 1   & 2   & 1   & 1   & ... & 2   & 1   & 2   & 2   & 1   & 2   & 1   & 2   & 1   & 1  \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| 1   | 1   | 2   | 1   | 1   | 2   | 2   | 1   | 2   | 1   | ... | 1   | 2   | 2   | 2   | 2   | 1   | 1   | 1   | 1   | 2   |\n",
+       "| 2   | 2   | 1   | 2   | 1   | 1   | 1   | 2   | 1   | 1   | ... | 2   | 1   | 2   | 2   | 1   | 2   | 1   | 2   | 1   | 1   |\n",
        "\n"
       ],
       "text/plain": [
        "     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13] [,14]\n",
-       "[1,] 1    1    2    1    1    2    2    1    2    1     ...   1     2     2    \n",
+       "[1,] 2    2    1    2    1    1    1    2    1    1     ...   2     1     2    \n",
        "     [,15] [,16] [,17] [,18] [,19] [,20] [,21]\n",
-       "[1,] 2     2     1     1     1     1     2    "
+       "[1,] 2     1     2     1     2     1     1    "
       ]
      },
      "metadata": {},
@@ -168,25 +168,25 @@
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "\t<tr><td>1  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>1  </td><td>2  </td><td>1  </td><td>2  </td><td>2  </td><td>...</td><td>1  </td><td>2  </td><td>2  </td><td>2  </td><td>1  </td><td>1  </td><td>1  </td><td>1  </td><td>1  </td><td>2  </td></tr>\n",
+       "\t<tr><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>...</td><td>2  </td><td>1  </td><td>2  </td><td>2  </td><td>2  </td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "\\begin{tabular}{llllllllllllllllllllllllllll}\n",
-       "\t 1   & 1   & 2   & 1   & 1   & 1   & 2   & 1   & 2   & 2   & ... & 1   & 2   & 2   & 2   & 1   & 1   & 1   & 1   & 1   & 2  \\\\\n",
+       "\t 2   & 2   & 1   & 2   & 1   & 1   & 1   & 2   & 1   & 1   & ... & 2   & 1   & 2   & 2   & 2   & 1   & 1   & 2   & 2   & 1  \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| 1   | 1   | 2   | 1   | 1   | 1   | 2   | 1   | 2   | 2   | ... | 1   | 2   | 2   | 2   | 1   | 1   | 1   | 1   | 1   | 2   |\n",
+       "| 2   | 2   | 1   | 2   | 1   | 1   | 1   | 2   | 1   | 1   | ... | 2   | 1   | 2   | 2   | 2   | 1   | 1   | 2   | 2   | 1   |\n",
        "\n"
       ],
       "text/plain": [
        "     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13] [,14]\n",
-       "[1,] 1    1    2    1    1    1    2    1    2    2     ...   1     2     2    \n",
+       "[1,] 2    2    1    2    1    1    1    2    1    1     ...   2     1     2    \n",
        "     [,15] [,16] [,17] [,18] [,19] [,20] [,21]\n",
-       "[1,] 2     1     1     1     1     1     2    "
+       "[1,] 2     2     1     1     2     2     1    "
       ]
      },
      "metadata": {},
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
-   "id": "6a12a2b6",
+   "execution_count": 296,
+   "id": "eff35f67",
    "metadata": {},
    "outputs": [
     {
@@ -209,8 +209,8 @@
       "text/plain": [
        "      Predicted\n",
        "Actual  1  2\n",
-       "     1 14  2\n",
-       "     2  3  9"
+       "     1 12  3\n",
+       "     2  1 12"
       ]
      },
      "metadata": {},
@@ -224,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
-   "id": "6a637821",
+   "execution_count": 297,
+   "id": "841243bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,23 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "id": "d0234531",
+   "execution_count": 298,
+   "id": "a08d891c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.821428571428571"
+       "0.857142857142857"
       ],
       "text/latex": [
-       "0.821428571428571"
+       "0.857142857142857"
       ],
       "text/markdown": [
-       "0.821428571428571"
+       "0.857142857142857"
       ],
       "text/plain": [
-       "[1] 0.8214286"
+       "[1] 0.8571429"
       ]
      },
      "metadata": {},
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d672aec",
+   "id": "a23e2e6e",
    "metadata": {},
    "source": [
     "# Segundo parte(alterando a amostra de treinamento para 70%)"
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "id": "f52473bb",
+   "execution_count": 299,
+   "id": "9d8066f1",
    "metadata": {},
    "outputs": [
     {
@@ -282,8 +282,8 @@
       "text/plain": [
        "      Predicted\n",
        "Actual  1  2\n",
-       "     1 41  9\n",
-       "     2  7 25"
+       "     1 36 10\n",
+       "     2  6 30"
       ]
      },
      "metadata": {},
@@ -328,8 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "id": "4c1b07ea",
+   "execution_count": 300,
+   "id": "f25fb752",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace0d4ba",
+   "id": "425f9469",
    "metadata": {},
    "source": [
     "# Terceira parte(alterando a amostra de treinamento para 20%)"
@@ -368,8 +368,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
-   "id": "9d303c09",
+   "execution_count": 303,
+   "id": "76e92d2d",
    "metadata": {},
    "outputs": [
     {
@@ -377,8 +377,8 @@
       "text/plain": [
        "      Predicted\n",
        "Actual  1  2\n",
-       "     1 93 28\n",
-       "     2 18 78"
+       "     1 77 49\n",
+       "     2 20 71"
       ]
      },
      "metadata": {},
@@ -423,23 +423,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "id": "ce8529b8",
+   "execution_count": 304,
+   "id": "447a5dba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.788018433179724"
+       "0.682027649769585"
       ],
       "text/latex": [
-       "0.788018433179724"
+       "0.682027649769585"
       ],
       "text/markdown": [
-       "0.788018433179724"
+       "0.682027649769585"
       ],
       "text/plain": [
-       "[1] 0.7880184"
+       "[1] 0.6820276"
       ]
      },
      "metadata": {},
