--- a/Heart.ipynb
+++ b/Heart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 7,
    "id": "8f6267bf",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 8,
    "id": "d8d1d979",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 9,
    "id": "20bb5fe6",
    "metadata": {},
    "outputs": [],
@@ -57,23 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 10,
    "id": "37e1dd29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.555555555555556"
+       "0.559670781893004"
       ],
       "text/latex": [
-       "0.555555555555556"
+       "0.559670781893004"
       ],
       "text/markdown": [
-       "0.555555555555556"
+       "0.559670781893004"
       ],
       "text/plain": [
-       "[1] 0.5555556"
+       "[1] 0.5596708"
       ]
      },
      "metadata": {},
@@ -82,16 +82,16 @@
     {
      "data": {
       "text/html": [
-       "0.444444444444444"
+       "0.440329218106996"
       ],
       "text/latex": [
-       "0.444444444444444"
+       "0.440329218106996"
       ],
       "text/markdown": [
-       "0.444444444444444"
+       "0.440329218106996"
       ],
       "text/plain": [
-       "[1] 0.4444444"
+       "[1] 0.4403292"
       ]
      },
      "metadata": {},
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 11,
    "id": "349c2c70",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 12,
    "id": "adc0fc1a",
    "metadata": {},
    "outputs": [
@@ -139,25 +139,25 @@
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "\t<tr><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>...</td><td>2  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td></tr>\n",
+       "\t<tr><td>2  </td><td>2  </td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>...</td><td>2  </td><td>1  </td><td>2  </td><td>2  </td><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "\\begin{tabular}{llllllllllllllllllllllllllll}\n",
-       "\t 2   & 2   & 1   & 2   & 1   & 1   & 1   & 2   & 1   & 1   & ... & 2   & 1   & 2   & 2   & 1   & 2   & 1   & 2   & 1   & 1  \\\\\n",
+       "\t 2   & 2   & 1   & 1   & 2   & 2   & 1   & 1   & 2   & 2   & ... & 2   & 1   & 2   & 2   & 2   & 2   & 1   & 2   & 1   & 1  \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| 2   | 2   | 1   | 2   | 1   | 1   | 1   | 2   | 1   | 1   | ... | 2   | 1   | 2   | 2   | 1   | 2   | 1   | 2   | 1   | 1   |\n",
+       "| 2   | 2   | 1   | 1   | 2   | 2   | 1   | 1   | 2   | 2   | ... | 2   | 1   | 2   | 2   | 2   | 2   | 1   | 2   | 1   | 1   |\n",
        "\n"
       ],
       "text/plain": [
        "     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13] [,14]\n",
-       "[1,] 2    2    1    2    1    1    1    2    1    1     ...   2     1     2    \n",
+       "[1,] 2    2    1    1    2    2    1    1    2    2     ...   2     1     2    \n",
        "     [,15] [,16] [,17] [,18] [,19] [,20] [,21]\n",
-       "[1,] 2     1     2     1     2     1     1    "
+       "[1,] 2     2     2     1     2     1     1    "
       ]
      },
      "metadata": {},
@@ -168,25 +168,25 @@
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "\t<tr><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>...</td><td>2  </td><td>1  </td><td>2  </td><td>2  </td><td>2  </td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td></tr>\n",
+       "\t<tr><td>1  </td><td>2  </td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>...</td><td>1  </td><td>1  </td><td>2  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>2  </td><td>1  </td><td>1  </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "\\begin{tabular}{llllllllllllllllllllllllllll}\n",
-       "\t 2   & 2   & 1   & 2   & 1   & 1   & 1   & 2   & 1   & 1   & ... & 2   & 1   & 2   & 2   & 2   & 1   & 1   & 2   & 2   & 1  \\\\\n",
+       "\t 1   & 2   & 1   & 1   & 2   & 2   & 1   & 1   & 2   & 2   & ... & 1   & 1   & 2   & 2   & 1   & 2   & 1   & 2   & 1   & 1  \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| 2   | 2   | 1   | 2   | 1   | 1   | 1   | 2   | 1   | 1   | ... | 2   | 1   | 2   | 2   | 2   | 1   | 1   | 2   | 2   | 1   |\n",
+       "| 1   | 2   | 1   | 1   | 2   | 2   | 1   | 1   | 2   | 2   | ... | 1   | 1   | 2   | 2   | 1   | 2   | 1   | 2   | 1   | 1   |\n",
        "\n"
       ],
       "text/plain": [
        "     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13] [,14]\n",
-       "[1,] 2    2    1    2    1    1    1    2    1    1     ...   2     1     2    \n",
+       "[1,] 1    2    1    1    2    2    1    1    2    2     ...   1     1     2    \n",
        "     [,15] [,16] [,17] [,18] [,19] [,20] [,21]\n",
-       "[1,] 2     2     1     1     2     2     1    "
+       "[1,] 2     1     2     1     2     1     1    "
       ]
      },
      "metadata": {},
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 13,
    "id": "eff35f67",
    "metadata": {},
    "outputs": [
@@ -209,8 +209,8 @@
       "text/plain": [
        "      Predicted\n",
        "Actual  1  2\n",
-       "     1 12  3\n",
-       "     2  1 12"
+       "     1 14  0\n",
+       "     2  4 10"
       ]
      },
      "metadata": {},
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 14,
    "id": "841243bf",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 15,
    "id": "a08d891c",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 16,
    "id": "9d8066f1",
    "metadata": {},
    "outputs": [
@@ -282,8 +282,8 @@
       "text/plain": [
        "      Predicted\n",
        "Actual  1  2\n",
-       "     1 36 10\n",
-       "     2  6 30"
+       "     1 38  5\n",
+       "     2 12 27"
       ]
      },
      "metadata": {},
@@ -328,23 +328,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 17,
+   "id": "41f5baf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.571428571428571"
+      ],
+      "text/latex": [
+       "0.571428571428571"
+      ],
+      "text/markdown": [
+       "0.571428571428571"
+      ],
+      "text/plain": [
+       "[1] 0.5714286"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.428571428571429"
+      ],
+      "text/latex": [
+       "0.428571428571429"
+      ],
+      "text/markdown": [
+       "0.428571428571429"
+      ],
+      "text/plain": [
+       "[1] 0.4285714"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "PC1\n",
+    "PC2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "f25fb752",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.804878048780488"
+       "0.792682926829268"
       ],
       "text/latex": [
-       "0.804878048780488"
+       "0.792682926829268"
       ],
       "text/markdown": [
-       "0.804878048780488"
+       "0.792682926829268"
       ],
       "text/plain": [
-       "[1] 0.804878"
+       "[1] 0.7926829"
       ]
      },
      "metadata": {},
@@ -368,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 19,
    "id": "76e92d2d",
    "metadata": {},
    "outputs": [
@@ -376,9 +424,9 @@
      "data": {
       "text/plain": [
        "      Predicted\n",
-       "Actual  1  2\n",
-       "     1 77 49\n",
-       "     2 20 71"
+       "Actual   1   2\n",
+       "     1 102  18\n",
+       "     2  47  50"
       ]
      },
      "metadata": {},
@@ -423,23 +471,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 20,
+   "id": "9b330f5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.555555555555556"
+      ],
+      "text/latex": [
+       "0.555555555555556"
+      ],
+      "text/markdown": [
+       "0.555555555555556"
+      ],
+      "text/plain": [
+       "[1] 0.5555556"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.444444444444444"
+      ],
+      "text/latex": [
+       "0.444444444444444"
+      ],
+      "text/markdown": [
+       "0.444444444444444"
+      ],
+      "text/plain": [
+       "[1] 0.4444444"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "PC1\n",
+    "PC2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "447a5dba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.682027649769585"
+       "0.700460829493088"
       ],
       "text/latex": [
-       "0.682027649769585"
+       "0.700460829493088"
       ],
       "text/markdown": [
-       "0.682027649769585"
+       "0.700460829493088"
       ],
       "text/plain": [
-       "[1] 0.6820276"
+       "[1] 0.7004608"
       ]
      },
      "metadata": {},
@@ -452,6 +548,14 @@
     "acuraciaTest = sum(diag) / n \n",
     "acuraciaTest"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c384e352",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
